--- a/dashboard-js/client/app/services/working_hours/modal.html
+++ b/dashboard-js/client/app/services/working_hours/modal.html
@@ -7,7 +7,7 @@
     <div class="form-group">
       <label for="inputName" class="col-md-3 control-label">Назва</label>
       <div class="col-md-9">
-        <input class="form-control" id="inputName" ng-model="data.sName" placeholder="Введіть назву будь ласка">
+        <input class="form-control" id="inputName" ng-model="slot.sName" placeholder="Введіть назву будь ласка">
       </div>
     </div>
 
@@ -17,16 +17,16 @@
         <label class="control-label pull-right">Час прийому з </label>
       </div>
       <div class="col-md-3">
-        <timepicker ng-model="data.sDateTimeAt" minute-step="5" show-meridian="false"></timepicker>
-        <!-- <input class="form-control" id="fromTime" placeholder="Оберіть час" ng-model="data.sDateTimeAt"> -->
+        <timepicker ng-model="slot.sDateTimeAt" minute-step="5" show-meridian="false"></timepicker>
+        <!-- <input class="form-control" id="fromTime" placeholder="Оберіть час" ng-model="slot.sDateTimeAt"> -->
       </div>
       <div class="col-md-1">
         <div class="spacer35"></div>
         <label class="control-label">до </label>
       </div>
       <div class="col-md-3">
-        <timepicker ng-model="data.sDateTimeTo" minute-step="5" show-meridian="false"></timepicker>
-        <!-- <input class="form-control" id="toTime" placeholder="Оберіть час" ng-model="data.sDateTimeTo"> -->
+        <timepicker ng-model="slot.sDateTimeTo" minute-step="5" show-meridian="false"></timepicker>
+        <!-- <input class="form-control" id="toTime" placeholder="Оберіть час" ng-model="slot.sDateTimeTo"> -->
       </div>
     </div>
 
@@ -34,7 +34,7 @@
       <div class="col-md-offset-3 col-md-9">
         <div class="checkbox">
           <label>
-            <input type="checkbox" ng-model="data.saRegionWeekDay.mo"> Понеділок
+            <input type="checkbox" ng-model="slot.saRegionWeekDay.mo"> Понеділок
           </label>
         </div>
       </div>
@@ -44,7 +44,7 @@
       <div class="col-md-offset-3 col-md-9">
         <div class="checkbox">
           <label>
-            <input type="checkbox" ng-model="data.saRegionWeekDay.tu"> Вівторок
+            <input type="checkbox" ng-model="slot.saRegionWeekDay.tu"> Вівторок
           </label>
         </div>
       </div>
@@ -54,7 +54,7 @@
       <div class="col-md-offset-3 col-md-9">
         <div class="checkbox">
           <label>
-            <input type="checkbox" ng-model="data.saRegionWeekDay.we"> Середа
+            <input type="checkbox" ng-model="slot.saRegionWeekDay.we"> Середа
           </label>
         </div>
       </div>
@@ -64,7 +64,7 @@
       <div class="col-md-offset-3 col-md-9">
         <div class="checkbox">
           <label>
-            <input type="checkbox" ng-model="data.saRegionWeekDay.th"> Четвер
+            <input type="checkbox" ng-model="slot.saRegionWeekDay.th"> Четвер
           </label>
         </div>
       </div>
@@ -74,7 +74,7 @@
       <div class="col-md-offset-3 col-md-9">
         <div class="checkbox">
           <label>
-            <input type="checkbox" ng-model="data.saRegionWeekDay.fr"> П'ятниця
+            <input type="checkbox" ng-model="slot.saRegionWeekDay.fr"> П'ятниця
           </label>
         </div>
       </div>
@@ -84,7 +84,7 @@
       <div class="col-md-offset-3 col-md-9">
         <div class="checkbox">
           <label>
-            <input type="checkbox" ng-model="data.saRegionWeekDay.sa"> Субота
+            <input type="checkbox" ng-model="slot.saRegionWeekDay.sa"> Субота
           </label>
         </div>
       </div>
@@ -94,7 +94,7 @@
       <div class="col-md-offset-3 col-md-9">
         <div class="checkbox">
           <label>
-            <input type="checkbox" ng-model="data.saRegionWeekDay.su"> Неділя
+            <input type="checkbox" ng-model="slot.saRegionWeekDay.su"> Неділя
           </label>
         </div>
       </div>
