testing validate date order by difference (wip-6)

--- a/central-js/client/index.html
+++ b/central-js/client/index.html
@@ -105,7 +105,6 @@
 <script src="bower_components/intl-tel-input/build/js/intlTelInput.min.js"></script>
 <script src="bower_components/intl-tel-input/lib/libphonenumber/build/utils.js"></script>
 <script src="bower_components/moment/moment.js"></script>
-<script src="bower_components/moment/locale/en.js"></script>
 <script src="bower_components/moment/locale/uk.js"></script>
 <script src="bower_components/moment/locale/ru.js"></script>
 <script src="bower_components/angular-moment/angular-moment.js"></script>
@@ -119,6 +118,7 @@
 <!-- injector:js -->
 <script src="app/404/404.js"></script>
 <script src="app/about/about.js"></script>
+<script src="app/about/test.js"></script>
 <script src="app/app.states.js"></script>
 <script src="app/common/components/dropdown/factories/dropdown.js"></script>
 <script src="app/common/components/errors/directives/mod.js"></script>
@@ -149,7 +149,6 @@
 <script src="app/common/services/places.service.js"></script>
 <script src="app/common/services/service.service.js"></script>
 <script src="app/common/services/validation.service.js"></script>
-<script src="app/common/services/validation.service.test.js"></script>
 <script src="app/common/states/statesRepository.provider.js"></script>
 <script src="app/documents/controllers/documents.controller.js"></script>
 <script src="app/documents/controllers/documentsbankid.controller.js"></script>
