--- a/central-js/client/app/about/test.html
+++ b/central-js/client/app/about/test.html
@@ -1,20 +1,27 @@
 <div class="container">
+    <style>
+        .test-form .ng-invalid {
+            background-color: #fcc;
+        }
+    </style>
     <div class="row">
         <div class="col-sm-12">
             <div>
-                <form novalidate name="testForm" class="form-horizontal">
+                <form novalidate name="testForm" class="form-horizontal test-form">
                     <div class="form-group">
                         <label for="email" class="col-sm-2 control-label">Email:</label>
                         <div class="col-sm-6">
-                            <input type="text" name="someMail" ng-model="formData.email" class="form-control" required>
-                            <!-- <div ng-show="testForm.$submitted || testForm.someMail.$touched">
-                                <div ng-show="testForm.someMail.$error.required">Вкажіть email, будь ласка</div>
-                                <div ng-show="testForm.someMail.$error.email">Email невірний</div>
-                            </div> -->
+                            <input type="text" name="privateMail" ng-model="formData.email" class="form-control" required>
                         </div>
-                        <div class="col-sm-4" ng-messages="testForm.someMail.$error" role="alert">
+                        <div class="col-sm-4" ng-messages="testForm.privateMail.$error" role="alert">
                             <div ng-message="required">You did not enter a field</div>
                             <div ng-message="email">Your field is too short</div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="autoVin" class="col-sm-2 control-label">Auto VIN:</label>
+                        <div class="col-sm-6">
+                            <input type="text" name="autoVin" ng-model="formData.autoVin" class="form-control" required>
                         </div>
                     </div>
                     <div class="form-group">
