display phone phone feature #673

--- a/central-js/client/app/documents/search/index.html
+++ b/central-js/client/app/documents/search/index.html
@@ -64,7 +64,7 @@
 
                                     <div class="row" ng-show="showSmsPass">
                                         <div class="form-group">
-                                            <label for="smsPass">Введіть отриманий Вами SMS код<!--em>*</em--></label>
+                                            <label for="smsPass">Введіть отриманий Вами SMS код на телефон {{ blurredPhone }}</label>
                                             <input type="text"
                                                    ng-model="smsPass"
                                                    class="form-control"
