hide print button for finished tasks

--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -135,7 +135,7 @@
                     ng-click="submitTask()"
                     class="btn btn-success">Опрацювати
             </button>
-            <button ng-hide="selectedTask.assignee == null"
+            <button ng-hide="selectedTask.assignee == null || sSelectedTask == 'finished'"
                     ng-click="print()"
                     class="btn btn-success">Роздрукувати
             </button>
