--- a/dashboard-js/client/index.html
+++ b/dashboard-js/client/index.html
@@ -72,10 +72,12 @@
           <script src="app/main/main.js"></script>
           <script src="app/reports/reports.controller.js"></script>
           <script src="app/reports/reports.js"></script>
-          <script src="app/services/directives/weekdays.directive.js"></script>
+          <script src="app/services/calendar/calendar.controller.js"></script>
+          <script src="app/services/directives/schedule.directive.js"></script>
+          <script src="app/services/flow_slots/flow_slots.controller.js"></script>
+          <script src="app/services/modal/modal.controller.js"></script>
           <script src="app/services/services.controller.js"></script>
           <script src="app/services/services.js"></script>
-          <script src="app/services/working_hours/modal.controller.js"></script>
           <script src="app/tasks/tasks.controller.js"></script>
           <script src="app/tasks/tasks.file.directive.js"></script>
           <script src="app/tasks/tasks.js"></script>
@@ -88,6 +90,7 @@
           <script src="components/print/PrintTemplate.js"></script>
           <script src="components/process/process.service.js"></script>
           <script src="components/report/reports.service.js"></script>
+          <script src="components/services/bp_schedule.service.js"></script>
           <script src="components/services/schedule.service.js"></script>
           <script src="components/task/task.service.js"></script>
           <!-- endinjector -->
