--- a/central-js/client/app/about/test.html
+++ b/central-js/client/app/about/test.html
@@ -1,9 +1,5 @@
 <div class="container">
     <style>
-    .test-form .ng-untouched.ng-invalid {
-        background-color: inherit;
-        border-color: inherit;
-    }
     .test-form .ng-touched.ng-invalid {
         background-color: #fee;
         border-color: #f99;
@@ -24,6 +20,10 @@
                         <div class="col-sm-6">
                             <input type="text" ng-tel-field="{defaultCountry:'ua', autoFormat:true, allowExtensions:false, preferredCountries:['ua'], autoPlaceholder:true}" name="privatePhone" ng-model="formData.privatePhone" class="form-control" required>
                         </div>
+                        <div class="col-sm-4" ng-messages="testForm.privatePhone.$error" role="alert">
+                            <div ng-message="required">I'm required</div>
+                            <div ng-message="phone">Будь ласка, правильний номер телефону</div>
+                        </div>
                     </div>
                     <!-- Mail -->
                     <div class="form-group">
@@ -31,11 +31,19 @@
                         <div class="col-sm-6">
                             <input type="text" name="privateMail" ng-model="formData.email" class="form-control" required>
                         </div>
+                        <div class="col-sm-4" ng-messages="testForm.privateMail.$error" role="alert">
+                            <div ng-message="required">I'm required</div>
+                            <div ng-message="email">Будь ласка, правильну адресу електронної пошти</div>
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="autoVin" class="col-sm-2 control-label">Auto VIN:</label>
                         <div class="col-sm-6">
                             <input type="text" name="vin_code" ng-model="formData.autoVin" class="form-control" required>
+                        </div>
+                        <div class="col-sm-4" ng-messages="testForm.vin_code.$error" role="alert">
+                            <div ng-message="required">I'm required</div>
+                            <div ng-message="autovin">Номер Auto VIN невірний - просимо виправити</div>
                         </div>
                     </div>
                     <div class="form-group">
@@ -43,11 +51,19 @@
                         <div class="col-sm-6">
                             <input type="text" name="textUa" ng-model="formData.textUa" class="form-control" required>
                         </div>
+                        <div class="col-sm-4" ng-messages="testForm.textUa.$error" role="alert">
+                            <div ng-message="required">I'm required</div>
+                            <div ng-message="textua">Будь ласка, тільки українські літери, пробіл або дефіс</div>
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="textRu" class="col-sm-2 control-label">Text Ru:</label>
                         <div class="col-sm-6">
                             <input type="text" name="textRu" ng-model="formData.textRu" class="form-control" required>
+                        </div>
+                        <div class="col-sm-4" ng-messages="testForm.textRu.$error" role="alert">
+                            <div ng-message="required">I'm required</div>
+                            <div ng-message="textua">Будь ласка, тільки російські літери, пробіл або дефіс</div>
                         </div>
                     </div>
                     <div class="form-group">
@@ -64,7 +80,7 @@
                         <label for="dateOrder" class="col-sm-2 control-label">Date Order:</label>
                         <div class="col-sm-6">
                             <input type="text" name="dateOrder" ng-model="formData.dateOrder" class="form-control" required>
-                            <p class="help-block">Уведіть дату у майбутньому, але не пізнішу, ніж за місяць від поточної</p>
+                            <p class="help-block">Уведіть дату у майбутньому, але не пізнішу, ніж за 10 днів від поточної</p>
                         </div>
                         <div class="col-sm-4" ng-messages="testForm.dateOrder.$error" role="alert">
                             <div ng-message="dateelapsed">{{testForm.dateOrder.lastErrorMessage}}</div>
@@ -72,21 +88,21 @@
                     </div>
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                            <input type="submit" class="btn btn-default" ng-click="formSubmit(formData)" value="ОК" ng-disabled="testForm.$invalid" >
+                            <input type="submit" class="btn btn-default" ng-click="formSubmit(formData)" value="ОК" ng-disabled="testForm.$invalid">
                             <button class="btn" ng-click="reset()">Скинути</button>
                         </div>
                     </div>
                 </form>
             </div>
         </div>
-        <!-- /row -->
-        <div class="row">
-            <div class="col-sm-6">
-                <pre>testForm.dateOrder = {{testForm.dateOrder | json}}</pre>
-            </div>
-            <div class="col-sm-6">
-                <pre>testForm.dateFormat = {{testForm.dateFormat | json}}</pre>
-            </div>
+    </div>
+    <!-- /row -->
+    <div class="row">
+        <div class="col-sm-6">
+            <pre>testForm.dateOrder = {{testForm.dateOrder | json}}</pre>
+        </div>
+        <div class="col-sm-6">
+            <pre>testForm.dateFormat = {{testForm.dateFormat | json}}</pre>
         </div>
     </div>
 </div>
