dms processes minor tweaks; test e-queue;

--- a/wf-region/src/main/resources/pattern/print/kiev_dms_print.html
+++ b/wf-region/src/main/resources/pattern/print/kiev_dms_print.html
@@ -167,7 +167,7 @@
 		<td style="border-bottom:1px solid #000000" colspan="9" height="20" align="CENTER" valign="TOP"><font face="Times New Roman" color="#000000"><br></font></td>
 		</tr>
 	<tr>
-		<td style="border-bottom:1px solid #000000" colspan="9" height="20" align="LEFT" valign="BOTTOM"><font color="#000000"><br></font></td>
+		<td style="border-bottom:1px solid #000000" colspan="9" height="20" align="LEFT" valign="BOTTOM"><font color="#000000">[kidsCitizenship]<br></font></td>
 		</tr>
 	<tr>
 		<td style="border-top:1px solid #000000" colspan="9" height="20" align="CENTER" valign="TOP"><font face="Times New Roman" color="#000000">(громадянство/підданство)</font></td>
